--- a/Src/ManiaAPI.NadeoAPI/ManiaAPI.NadeoAPI.csproj
+++ b/Src/ManiaAPI.NadeoAPI/ManiaAPI.NadeoAPI.csproj
@@ -15,8 +15,8 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>net9.0;net8.0</TargetFrameworks>
-		<LangVersion>13</LangVersion>
+		<TargetFrameworks>net10.0;net9.0;net8.0</TargetFrameworks>
+		<LangVersion>14</LangVersion>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<IsTrimmable>true</IsTrimmable>
@@ -41,7 +41,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="TmEssentials" Version="2.5.3" />
+		<PackageReference Include="TmEssentials" Version="2.6.0" />
 	</ItemGroup>
 
 	<ItemGroup>
