--- a/Src/ManiaAPI.UnitedLadder/ManiaAPI.UnitedLadder.csproj
+++ b/Src/ManiaAPI.UnitedLadder/ManiaAPI.UnitedLadder.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<PackageId>ManiaAPI.UnitedLadder</PackageId>
-		<Version>2.3.3</Version>
+		<Version>2.5.3</Version>
 		<Authors>BigBang1112</Authors>
 		<Description>Wrapper for the new UnitedLadder API (ul.unitedascenders.xyz). Part of the ManiaAPI.NET library set.</Description>
 		<Copyright>Copyright (c) 2022-2026 Petr Pivoňka</Copyright>
@@ -15,8 +15,8 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>net9.0;net8.0</TargetFrameworks>
-		<LangVersion>13</LangVersion>
+		<TargetFrameworks>net10.0;net9.0;net8.0</TargetFrameworks>
+		<LangVersion>14</LangVersion>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<IsTrimmable>true</IsTrimmable>
